[package]
name = "blinded-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.30.0"
reqwest = { version = "0.11.16", features = ["blocking", "json", "socks"] }
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8.12", features = ["chrono", "uuid"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
clap = { version = "4.2.5", features = ["derive"]}
rand = "0.8.5"
multi-party-ecdsa = { git = "https://github.com/ssantos21/multi-party-ecdsa.git", branch = "blinded_2p_ecdsa_01" }
curv-kzen = { version = "0.9", default-features = false }
dirs = "4.0"
electrum-client = { version = "0.14" }
log = "0.4.17"
sha3 = "0.10.7"
hex = "0.4.3"
digest = "0.10.4"

# Added for compatibility with curv-kzen 0.9
[dependencies.secp256k1]
version = "0.20"
features = ["serde", "rand-std", "global-context"]
